# PARL

./: CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: README.md  black.yml  ci.yml  lint.yml  publish.yml  ruff.yml  tests.yml
docs/: API.md
examples/: README.md  basic_usage.py  huggingface_integration.py  quickstart_hf.py  requirements.txt
parl/: __init__.py  main.py
tests/: __init__.py  test_parl.py
